--- a/src/scss/common/_mixins.scss
+++ b/src/scss/common/_mixins.scss
@@ -57,6 +57,9 @@
 // ─── Author component mixins ──────────────────────────────────────────────────
 
 @mixin author-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
   border-radius: v.$border-radius-md;
 
